syntax = "proto3";

package uk.tvidal.kraft.codec.binary;

message DataEntry {
    UniqueID id = 1;
    EntryType type = 2;
    int64 term = 9;
    bytes payload = 10;
}

message IndexEntry {
    UniqueID id = 1;
    int64 index = 2;
    int32 offset = 3;
    int32 bytes = 4;
}

message FileHeader {
    UniqueID magic_number = 1;
    int32 version = 2;
    FileState state = 3;
    int64 first_index = 4;
    int32 entry_count = 5;
    int32 offset = 6;
}

message UniqueID {
    fixed64 low = 1;
    fixed64 high = 2;
}

enum EntryType {
    DEFAULT = 0;
}

enum FileState {
    COMMITTED = 0;
    ACTIVE = 1;
    TRUNCATED = 2;
    DISCARDED = 8;
}
